[gd_scene load_steps=3 format=3 uid="uid://c1uw60olp67wi"]

[ext_resource type="Script" path="res://Scenes/UI/pause_menu.gd" id="1_15uap"]
[ext_resource type="Theme" uid="uid://bfw3jfeywv4ow" path="res://Scenes/UI/ui.tres" id="2_0lwgd"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 2
visible = false
script = ExtResource("1_15uap")

[node name="Control" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchor_right = 0.999
anchor_bottom = 0.999
offset_right = 0.279907
offset_bottom = -0.280029

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 1279.0
offset_bottom = 718.0
color = Color(0.384314, 1, 0, 0.184314)

[node name="BoxContainer" type="BoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
text = "- PAUSE -"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0lwgd")
text = "Continue"

[node name="Restart" type="Button" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0lwgd")
text = "Restart"

[node name="Exit" type="Button" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_0lwgd")
text = "Exit"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="Control/BoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/BoxContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Control/BoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
